# microservices-demo

./: .gitignore  Tiltfile  WORKSPACE  comparision.md  deps.bzl
pb/: BUILD.bazel  demo.proto
pb/grpc/health/v1/: BUILD.bazel
src/adservice/: BUILD.bazel
src/adservice/src/main/proto/: BUILD.bazel  demo.proto
src/cartservice/src/protos/: BUILD.bazel
src/checkoutservice/: BUILD.bazel  go.mod
src/checkoutservice/genproto/: BUILD.bazel
src/checkoutservice/money/: BUILD.bazel
src/currencyservice/: BUILD.bazel  package-lock.json  package.json
src/currencyservice/proto/: BUILD.bazel
src/emailservice/: requirements.in  requirements.txt
src/frontend/: BUILD.bazel  go.mod  go.sum
src/frontend/genproto/: BUILD.bazel
src/frontend/money/: BUILD.bazel
src/loadgenerator/: requirements.txt
src/paymentservice/: package-lock.json  package.json
src/paymentservice/proto/: BUILD.bazel
src/productcatalogservice/: BUILD.bazel  go.mod  go.sum
src/productcatalogservice/genproto/: BUILD.bazel
src/shippingservice/: BUILD.bazel  go.mod
src/shippingservice/genproto/: BUILD.bazel
