load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "handlers.go",
        "main.go",
        "middleware.go",
        "rpc.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_googlecloudplatform_microservices_demo_src_frontend//genproto:go_default_library",
        "@com_github_googlecloudplatform_microservices_demo_src_frontend//money:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@com_google_cloud_go_profiler//:go_default_library",
        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
        "@io_opencensus_go//plugin/ochttp:go_default_library",
        "@io_opencensus_go//plugin/ochttp/propagation/b3:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_jaeger//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "frontend",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
