load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["server.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "@//src/productcatalogservice/genproto:hipstershop",  # keep
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_profiler//:go_default_library",
        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_jaeger//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "productcatalogservice",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

'''
go_test(
    name = "lib_test",
    srcs = ["server_test.go"],
    embed = [":lib"],
    deps = [
        "@//src/productcatalogservice/genproto:hipstershop",  # keep
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
'''
