load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = [
        "main.go",
        "quote.go",
        "tracker.go",
    ],
    importpath = "shippingservice",
    visibility = ["//visibility:private"],
    deps = [
        "//src/shippingservice/genproto:hipstershop",  # keep
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_profiler//:go_default_library",
        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_jaeger//:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        #"google.golang.org/grpc/health/grpc_health_v1"
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "shippingservice",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["shippingservice_test.go"],
    embed = [":lib"],
    deps = [
        "//src/shippingservice/genproto:hipstershop",  # keep
        "@org_golang_x_net//context:go_default_library",
    ],
)
