load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grpc_health_v1_proto",
    srcs = ["health.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "grpc_health_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/grpc/health/grpc_health_v1",
    proto = ":grpc_health_v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc_health_v1",
    embed = [":grpc_health_v1_go_proto"],
    importpath = "google.golang.org/grpc/health/grpc_health_v1",
    visibility = ["//visibility:public"],
)
