load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hipstershop_proto",
    srcs = ["Cart.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hipstershop_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "src/cartservice/src/protos",
    proto = ":hipstershop_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protos",
    embed = [":hipstershop_go_proto"],
    importpath = "src/cartservice/src/protos",
    visibility = ["//visibility:public"],
)
