load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "hipstershop_proto",
    srcs = ["demo.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "hipstershop_java_proto",
    visibility = ["//visibility:public"],
    deps = [":hipstershop_proto"],
)

java_grpc_library(
    name = "hipstershop_java_grpc",
    srcs = [":hipstershop_proto"],
    visibility = ["//visibility:public"],
    deps = [":hipstershop_java_proto"],
)
